fix bug where mouse and drawing were not aligned

--- a/game_front_end/public/styles.css
+++ b/game_front_end/public/styles.css
@@ -3,6 +3,8 @@ html, body, #root {
     width: 100%;
     height: 100%;
     margin: 0;
+    padding-top: 0.5%;
+    box-sizing: border-box;
 }
 
 #home-component {
@@ -51,7 +53,7 @@ html, body, #root {
     background-color: #8bc07b;
     width: 96%;
     height: 75%;
-    margin: 2%;
+    margin: auto;
     padding: 1%;
     box-sizing: border-box;
 }
@@ -142,8 +144,10 @@ html, body, #root {
 
 canvas {
     background-color: white;
-    width: 100%;
-    height: 70%;
+    width: 800px;
+    height: 400px;
+    display: block;
+    margin: 0 auto;
 }
 
 #color-picker {
@@ -203,7 +207,7 @@ canvas {
     padding-left: 2%;
     padding-right: 2%;
     font-weight: 600;
-    margin-left: 10px;
+    margin-left: 1%;
     height: 80%;
 }
 
